--- a/Smart Energy Usage Forecasting and Optimization for Buildings.ipynb
+++ b/Smart Energy Usage Forecasting and Optimization for Buildings.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCW0PxBEiuD25/pI4IKVzS",
+      "authorship_tag": "ABX9TyP40Sbta21FMntlKLegLNx8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "4x2EnJw42mYm"
       },
@@ -80,7 +80,7 @@
         "id": "0DmoIDgJ4Fm8",
         "outputId": "47c2b41e-ec3f-4f54-acca-1dcaabe53160"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,7 +425,7 @@
       "metadata": {
         "id": "5z_SGWSS4qGD"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "L_t8gK-x5O7K"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "q_zXrbQv5hkz"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
         "id": "1Ze88_Dd5pD6",
         "outputId": "e68ce2e8-6bb4-4746-be50-4391a38a7a0c"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +830,7 @@
         "id": "JNhOsCUGEVEv",
         "outputId": "ca39573b-e8d1-47a4-ab3a-4a4ff45db7b3"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "id": "CilrucbpEd3F",
         "outputId": "2bc53bc5-a8b9-43be-a81f-605d7f40d279"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,7 +1231,7 @@
         "id": "ShLbfPYf6RN2",
         "outputId": "6d551491-6696-4619-e361-8841ff837d63"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1316,7 @@
       "metadata": {
         "id": "T13cYocUCGKQ"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1333,7 +1333,7 @@
         "id": "xy2cYHwtCGCW",
         "outputId": "0e3bc641-9bc2-460c-f912-b69855507d29"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1417,7 +1417,7 @@
       "metadata": {
         "id": "31X6qlGaCF6i"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1433,7 +1433,7 @@
         "id": "6-tvAevmCFwI",
         "outputId": "bcc29acf-aaea-4f21-c2ba-d68d22a4d504"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1533,7 @@
       "metadata": {
         "id": "SUZeFL9A7Uhx"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1552,7 +1552,7 @@
         "id": "jCqX7yaJK4Xu",
         "outputId": "ee9d57a4-a3d3-402a-b70f-4713f7df7a94"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1608,7 +1608,7 @@
       "metadata": {
         "id": "Dht_BC92K2k7"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1624,7 +1624,7 @@
         "id": "eGedUQ8JLM_J",
         "outputId": "80b0f2b4-dad5-4e18-af65-424cb5277e5e"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1651,7 +1651,7 @@
         "id": "Eor4rUTqLzVb",
         "outputId": "96bd82ac-5614-4b0a-c5de-47721e6bcb9a"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1678,7 +1678,7 @@
         "id": "UYi6X64wLzKB",
         "outputId": "b067a43b-871b-431f-dda6-baadedf8cc1e"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1705,7 +1705,7 @@
         "id": "S4YAkzCSLzF8",
         "outputId": "819e936a-d376-46e6-a02f-521d295cbe21"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1732,7 +1732,7 @@
         "id": "_kcKOviqLy_4",
         "outputId": "95579f46-d9cc-4940-f8d5-7156bd90eb2c"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1789,7 +1789,7 @@
       "metadata": {
         "id": "VBGtneycR3kt"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1805,7 +1805,7 @@
         "id": "UCYFHtRFTmed",
         "outputId": "b4f11d67-8497-47f6-ec37-c86979ec4ac2"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1843,7 +1843,7 @@
         "id": "eVyLjxZrWbmg",
         "outputId": "010a241a-26dc-4462-db9f-3b9d693bd890"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1883,7 +1883,7 @@
         "id": "f1O402LmWbj9",
         "outputId": "3d524ddd-b783-4e2d-d6d5-21da665739c9"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1921,7 +1921,7 @@
         "id": "-FFdYhtfWbSw",
         "outputId": "9050918b-23fb-4c81-c4d7-1beef4b1d32a"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1973,7 +1973,7 @@
         "id": "jsr0_Tm2Zypu",
         "outputId": "d2f7c15c-8e75-4264-f08c-77a765dd2238"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2004,7 +2004,7 @@
         "id": "GAwyjUFnZyun",
         "outputId": "2ffbfaf7-9ff7-4c66-c919-95177ca781f4"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2081,7 +2081,7 @@
         "id": "mpADuEhwZyzg",
         "outputId": "8f191659-3fe8-4971-fcb3-693d89cb6f3a"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2129,7 +2129,7 @@
         "id": "BcM30KyShOlz",
         "outputId": "3802554f-d1c6-4480-bd61-26d34065477d"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2204,7 +2204,7 @@
         "id": "D1Hy9NlFV04V",
         "outputId": "3069dbc4-3e7d-4bcf-a43d-5629c518d02c"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2275,7 +2275,7 @@
         "id": "iVeqMv2lLO0i",
         "outputId": "ca2fcb71-53c6-4ea5-d538-0ff232e7a243"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2328,7 +2328,7 @@
         "id": "9BTJCSSENC27",
         "outputId": "a0a5a46b-503c-47dd-bcd2-af94580c9424"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2385,7 +2385,7 @@
         "id": "BfPf2ARtMXoB",
         "outputId": "2cb198a5-3453-4313-e4c6-54f3a9051b99"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2429,7 +2429,7 @@
       "metadata": {
         "id": "1hZSNahQNT40"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2440,7 +2440,7 @@
       "metadata": {
         "id": "UnW4dLudNuBs"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2466,7 +2466,7 @@
         "id": "3r_B3FhmN33E",
         "outputId": "e28e0487-9e70-45d0-83a9-583df6d05aab"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2525,7 +2525,7 @@
       "metadata": {
         "id": "WIw5IjmMUSl7"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2541,7 +2541,7 @@
         "id": "XzA0SeSmQMMa",
         "outputId": "6cd9751f-9b2f-4840-d037-ea1ec70cd5f9"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2984,7 +2984,7 @@
         "id": "_P3Y-hNlWgKf",
         "outputId": "1186861e-7e4e-4dac-b151-f5c5c26ed8bf"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3124,7 +3124,7 @@
         "id": "_-6o-SNdWlyj",
         "outputId": "9c1bdc6a-6bc9-402b-f394-c794dcf0f26a"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3583,7 +3583,7 @@
       "metadata": {
         "id": "VhTXhT-bXC6p"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3596,7 +3596,7 @@
       "metadata": {
         "id": "agNC9hQgeaMD"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3612,7 +3612,7 @@
         "id": "MuSiC_DDgB7d",
         "outputId": "4318d1f4-b786-41a1-ee0a-69d357a8465c"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4060,7 +4060,7 @@
       "metadata": {
         "id": "nRoP7lTukiq4"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4087,7 +4087,7 @@
       "metadata": {
         "id": "FR6BygPPgrYY"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4111,7 +4111,7 @@
         "id": "opDhDLdXhUb7",
         "outputId": "5af766b3-4699-47bb-cbde-e6fc56bf08b7"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4181,7 +4181,7 @@
         "id": "lsaSU1qZhVEH",
         "outputId": "04a7f27f-1c89-4f13-a76f-2d1efabca976"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4214,7 +4214,7 @@
         "id": "PRB1j2YghUVE",
         "outputId": "dfedf26e-32f1-42d7-edd8-7aa89e7edbe8"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4245,7 +4245,7 @@
         "id": "6DPA8fOzmsn4",
         "outputId": "059d9e6f-1093-4a7a-a382-8307f42f46c8"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4304,7 +4304,7 @@
         "id": "DcB_yRWdnRkA",
         "outputId": "53a63e37-06ca-4ea1-8579-8497b81753d7"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4330,16 +4330,16 @@
     {
       "cell_type": "code",
       "source": [
-        "import pickle\n"
+        "model_lstm.save(\"lstm_energy_model.h5\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3LsQuPNen-UR",
-        "outputId": "289363a7-b39a-48a6-ff66-de33c13af32a"
+        "outputId": "68b81d5b-8598-4868-f0b8-c474a1a64db5"
       },
-      "execution_count": 111,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -4367,7 +4367,7 @@
       "metadata": {
         "id": "Ag2hnJ3Xoj0a"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4376,7 +4376,7 @@
       "metadata": {
         "id": "NKYHR_GuvRIR"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     }
   ]
